--- a/src/universal/conf/logback.xml.template
+++ b/src/universal/conf/logback.xml.template
@@ -10,7 +10,7 @@
 	</appender>
 
 	<appender name="FILE" class="ch.qos.logback.core.FileAppender">
-		<file>mscrm-auth.log</file>
+		<file>mscrm.log</file>
 		<append>false</append>
 		<encoder>
 			<pattern>%d{HH:mm:ss.SSS} [%thread] %-5level %logger{35} - %msg%n
@@ -18,7 +18,7 @@
 		</encoder>
 	</appender>
 
-	<logger name="crm" level="debug" />
+	<logger name="crm" level="error" />
     
 	<root level="error">
 		<appender-ref ref="FILE" />
